# UwU-C

./: .bazelrc  .gitignore  BUILD.bazel  Dockerfile  MODULE.bazel  Makefile  README.md  crazy.sh  damn.sh  docker-run.sh  server.py
docs/: syntax.md
example/: calculator.uwu  ez.uwu  game.uwu
kernel/: Makefile  boot.asm  e1000.c  entry.asm  fs.c  fs.h  idt.c  idt.h  irq.c  isr.asm  isr.c  kernel.c  linker.ld  server.py
src/: ast.c  ast.h  codegen.c  codegen.h  ir.c  ir.h  jit_engine.c  jit_engine.h  lexer.c  lexer.h  main.c  parser.h  parser_legacy.c  parser_new.c  semantic.c  semantic.h  util.c  util.h
stdlib/: uwu_stdlib.c  uwu_stdlib.h
utils/textmate/: README.md  info.plist
utils/textmate/Syntaxes/: uwu-c.tmLanguage.json
